Update embed code examples to use.typekit.net and remove globals
Use the protocol-less URL style, use the use.typekit.net domain, and remove
the use of an additional global. This brings the examples in line with our
current embed code styles.

--- a/async-attribute.html
+++ b/async-attribute.html
@@ -5,7 +5,7 @@
     <title>Typekit async loading pattern: Script tag with async attribute</title>
 
     <!-- BEGIN TYPEKIT SNIPPET -->
-    <script type="text/javascript" src="http://use.typekit.com/rij7fwm.js" onload="try{Typekit.load();}catch(e){}" async></script>
+    <script type="text/javascript" src="//use.typekit.net/rij7fwm.js" onload="try{Typekit.load();}catch(e){}" async></script>
     <!-- END TYPEKIT SNIPPET -->
 
     <style type="text/css">
