--- a/bottom-of-body.html
+++ b/bottom-of-body.html
@@ -35,7 +35,7 @@
     </ul>
 
     <!-- BEGIN TYPEKIT SNIPPET -->
-    <script type="text/javascript" src="http://use.typekit.com/rij7fwm.js"></script>
+    <script type="text/javascript" src="//use.typekit.net/rij7fwm.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <!-- END TYPEKIT SNIPPET -->
 
