--- a/font-events.html
+++ b/font-events.html
@@ -6,26 +6,26 @@
 
     <!-- BEGIN TYPEKIT SNIPPET -->
     <script type="text/javascript">
-      TypekitConfig = {
-        kitId: 'rij7fwm',
-        scriptTimeout: 3000
-      };
       (function() {
+        var config = {
+          kitId: 'rij7fwm',
+          scriptTimeout: 3000
+        };
         var h = document.getElementsByTagName('html')[0];
         h.className += ' wf-loading';
         var t = setTimeout(function() {
           h.className = h.className.replace(/(\s|^)wf-loading(\s|$)/g, '');
           h.className += ' wf-inactive';
-        }, TypekitConfig.scriptTimeout);
+        }, config.scriptTimeout);
         var tk = document.createElement('script');
-        tk.src = '//use.typekit.com/' + TypekitConfig.kitId + '.js';
+        tk.src = '//use.typekit.net/' + config.kitId + '.js';
         tk.type = 'text/javascript';
         tk.async = 'true';
         tk.onload = tk.onreadystatechange = function() {
           var rs = this.readyState;
           if (rs && rs != 'complete' && rs != 'loaded') return;
           clearTimeout(t);
-          try { Typekit.load(TypekitConfig); } catch (e) {}
+          try { Typekit.load(config); } catch (e) {}
         };
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(tk, s);
