--- a/standard-jquery.html
+++ b/standard-jquery.html
@@ -7,16 +7,16 @@
 
     <!-- BEGIN TYPEKIT SNIPPET -->
     <script type="text/javascript">
-      TypekitConfig = {
-        kitId: 'rij7fwm'
-      };
       (function() {
+        var config = {
+          kitId: 'rij7fwm'
+        };
         $.ajax({
-          url: '//use.typekit.com/' + TypekitConfig.kitId + '.js',
+          url: '//use.typekit.net/' + config.kitId + '.js',
           dataType: 'script',
           cache: true,
           success: function() {
-            try { Typekit.load(TypekitConfig); } catch (e) {}
+            try { Typekit.load(config); } catch (e) {}
           }
         });
       })();
