Fix bug with double callback in IE9
This shouldn't matter since Typekit.load should be a no-op the second time,
but it's worth cleaning up anyway.

--- a/font-events.html
+++ b/font-events.html
@@ -17,13 +17,15 @@
           h.className = h.className.replace(/(\s|^)wf-loading(\s|$)/g, ' ');
           h.className += ' wf-inactive';
         }, config.scriptTimeout);
+        var d = false;
         var tk = document.createElement('script');
         tk.src = '//use.typekit.net/' + config.kitId + '.js';
         tk.type = 'text/javascript';
         tk.async = 'true';
         tk.onload = tk.onreadystatechange = function() {
           var rs = this.readyState;
-          if (rs && rs != 'complete' && rs != 'loaded') return;
+          if (d || rs && rs != 'complete' && rs != 'loaded') return;
+          d = true;
           clearTimeout(t);
           try { Typekit.load(config); } catch (e) {}
         };
