--- a/standard.html
+++ b/standard.html
@@ -10,13 +10,15 @@
         var config = {
           kitId: 'rij7fwm'
         };
+        var d = false;
         var tk = document.createElement('script');
         tk.src = '//use.typekit.net/' + config.kitId + '.js';
         tk.type = 'text/javascript';
         tk.async = 'true';
         tk.onload = tk.onreadystatechange = function() {
           var rs = this.readyState;
-          if (rs && rs != 'complete' && rs != 'loaded') return;
+          if (d || rs && rs != 'complete' && rs != 'loaded') return;
+          d = true;
           try { Typekit.load(config); } catch (e) {}
         };
         var s = document.getElementsByTagName('script')[0];
